# cloud-mastery-terraform-learning

./: ANSIBLE_PUPPET_GUIDE.md  ARCHITECTURE_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  MINIMAL_STACKS_RUNBOOK.md  Makefile  QUICK_REFERENCE.md  README.md  ROOT_STACK_ORCHESTRATION.md  SOLUTION_ARCHITECTURE.md
agent-world-lab/backend/python/: .coverage  ARCHITECTURE_PYTHON_BACKEND.md  README.md  pyproject.toml
agent-world-lab/backend/python/agent_world_lab_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-world-lab/backend/python/app/: main.py  settings.py
agent-world-lab/backend/python/app/adapters/: abstractions.py  aws.py  azure.py  gcp.py  mcp.py
agent-world-lab/backend/python/app/api/: contracts.py  deps.py  middleware.py
agent-world-lab/backend/python/app/api/routers/: approvals.py  audit.py  auth.py  chat.py  governance.py  health.py  sessions.py  tools.py
agent-world-lab/backend/python/app/application/: interfaces.py  models.py
agent-world-lab/backend/python/app/auth/: models.py  token_service.py  user_store.py
agent-world-lab/backend/python/app/domain/: models.py
agent-world-lab/backend/python/app/infrastructure/in_memory/: approval_service.py  audit_service.py  session_service.py  thread_service.py
agent-world-lab/backend/python/app/infrastructure/services/: baseline_agent_orchestrator.py  chat_service.py  (+4 more)
agent-world-lab/backend/python/tests/integration/: test_api_integration.py
agent-world-lab/backend/python/tests/unit/: test_approval_service.py  test_chat_service.py  test_hitl_policy_service.py  test_tool_authorization_service.py
(+4711 files in other folders)
