[project]
name = "agent-world-lab-python"
version = "0.1.0"
description = "Python backend parity for Agent World Lab .NET 8 API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.9.0",
  "PyJWT>=2.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
